--- a/houses.html
+++ b/houses.html
@@ -6,63 +6,264 @@
     <title>Houses</title>
 
     <link rel="stylesheet" href="styles/bootstrap.css" />
+    <link rel="stylesheet" href="styles/style.css" />
   </head>
   <body>
-    <div class="navbar-one">
-      <img
-        src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1642399114/portal/web%20development%20beginners/05%20Project%20Airbnb/assets/logo-airbnb.png"
-        alt="logo"
-      />
-      <button type="button" name="profile">Tony Russo</button>
-      <button type="button" name="login">Logout</button>
+    <!--Logo and Login navbar-->
+    <div class="container">
+      <nav class="navbar">
+        <div class="container-fluid mb-3">
+          <a class="navbar-brand">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1642399114/portal/web%20development%20beginners/05%20Project%20Airbnb/assets/logo-airbnb.png"
+              alt=""
+              height="40"
+              class="d-inline-block align-text-top"
+            />
+          </a>
+          <div class="d-grid gap-2 d-md-flex justify-content-md-end">
+            <button class="btn btn-outline-secondary me-md-2" type="button">
+              Thais Finck
+            </button>
+            <button class="btn btn-outline-secondary" type="button">
+              Logout
+            </button>
+          </div>
+        </div>
+      </nav>
+      <!--Filter Navbar-->
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
+        <div class="container-fluid">
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav">
+              <li class="nav-item">
+                <div class="input-group ">
+                  <label class="input-group-text" for="location">L</label>
+                  <select class="form-select" id="location">
+                    <option selected>Any Location</option>
+                    <option>Koh Phangam</option>
+                    <option>Koh Samui</option>
+                    <option>Bali</option>
+                  </select>
+                </div>
+              </li>
+              <li class="nav-item">
+                <div class="input-group ">
+                  <label class="input-group-text" for="rooms">R</label>
+                  <select class="form-select" id="rooms">
+                    <option selected>Any rooms</option>
+                    <option>1 room</option>
+                    <option>2 rooms</option>
+                    <option>3 rooms</option>
+                    <option>4 rooms</option>
+                    <option>5 rooms</option>
+                    <option>more</option>
+                  </select>
+                </div>
+              </li>
+              <li class="nav-item">
+                <div class="input-group">
+                  <span class="input-group-text">$</span>
+                  <input
+                    type="number"
+                    class="form-control"
+                    aria-label="Amount (to the nearest dollar)"
+                    placeholder="max price"
+                  />
+                </div>
+              </li>
+              <li class="nav-item">
+                <div class="input-group">
+                  <label class="input-group-text" for="price">P</label>
+                  <select class="form-select" id="price">
+                    <option selected>Price(low to high)</option>
+                    <option>Price(high to low)</option>
+                  </select>
+                </div>
+              </li>
+              <li class="nav-item">
+                <input
+                  type="text"
+                  class="form-control"
+                  placeholder="House name..."
+                />
+              </li>
+              <li class="nav-item">
+                <button type="button" class="btn btn-secondary">Search</button>
+              </li>
+            </ul>
+          </div>
+        </div>
+      </nav>
     </div>
-    <div class="navbar-two">
-      <form>
-        <select>
-          <option selected>Any Location</option>
-          <option>Koh Phangam</option>
-          <option>Koh Samui</option>
-          <option>Bali</option>
-        </select>
-      </form>
-      <form>
-        <select>
-          <option selected>Any rooms</option>
-          <option>1 room</option>
-          <option>2 rooms</option>
-          <option>3 rooms</option>
-          <option>4 rooms</option>
-          <option>5 rooms</option>
-        </select>
-      </form>
-      <input type="number" placeholder="max price" />
-      <form>
-        <select>
-          <option selected>Price(low to high)</option>
-          <option>Price(high to low)</option>
-        </select>
-      </form>
-      <input type="text" placeholder="House name..." />
+    <!--Properties-->
+    <div class="container mt-5">
+      <div class="row">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text"><small>Koh Samui . 4 rooms</small></p>
+              <h5 class="card-title">Luxury Villa in Chaweng</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <p class="card-text">3 reviews</p>
+                  </div>
+                  <div class="col">
+                    <p class="card-text">$350/night</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_02.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text"><small>Koh Phangam . 3 rooms</small></p>
+              <h5 class="card-title">Luxury Villa in Chaweng</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <p class="card-text">1 reviews</p>
+                  </div>
+                  <div class="col">
+                    <p class="card-text">$150/night</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_03.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text"><small>Bali . 3 rooms</small></p>
+              <h5 class="card-title">Seminyak KuDeTa Beach</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <p class="card-text">2 reviews</p>
+                  </div>
+                  <div class="col">
+                    <p class="card-text">$120/night</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_04.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text"><small>Bali . 5 rooms</small></p>
+              <h5 class="card-title">5 Bed Villa Canguu</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <p class="card-text">1 reviews</p>
+                  </div>
+                  <div class="col">
+                    <p class="card-text">$250/night</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
     </div>
-    <div class="properties"></div>
-    <div class="chaweng">
-      <img
-        src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
-        alt="chaweng propertie"
-      />
-      <p><small>Koh Samui . 4 rooms</small></p>
-      <h2>Luxury Villa in Chaweng</h2>
-      <p>3 reviews</p>
-      <p>$350/night</p>
-      <div class="Lotus1">
-        <img
-          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_02.png"
-          alt="lotus 1 propertie"
-        />
-        <p><small>Koh Phangam . 3 rooms</small></p>
-        <h2>Private Villa Lotus 1</h2>
-        <p>1 reviews</p>
-        <p>$150/night</p>
+    <div class="container mt-5">
+      <div class="row justify-content-md-end">
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_05.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text"><small>Koh Phangam . 2 rooms</small></p>
+              <h5 class="card-title">Archie Village House</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <p class="card-text">1 reviews</p>
+                  </div>
+                  <div class="col">
+                    <p class="card-text">$80/night</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_06.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text"><small>Koh Phangam . 6 rooms</small></p>
+              <h5 class="card-title">Luxury 6 Bed Villa</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <p class="card-text">0 reviews</p>
+                  </div>
+                  <div class="col">
+                    <p class="card-text">$150/night</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card" style="width: 18rem;">
+            <img
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_07.png"
+              class="card-img-top"
+              alt="..."
+            />
+            <div class="card-body">
+              <p class="card-text"><small>Koh Phangam . 4 rooms</small></p>
+              <h5 class="card-title">Narivana Koh Phangam</h5>
+              <div class="container">
+                <div class="row">
+                  <div class="col">
+                    <p class="card-text">0 reviews</p>
+                  </div>
+                  <div class="col">
+                    <p class="card-text">$100/night</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
     </div>
   </body>
