Spacing the last row

--- a/houses.html
+++ b/houses.html
@@ -194,8 +194,8 @@
       </div>
     </div>
     <div class="container mt-5">
-      <div class="row justify-content-md-end">
-        <div class="col">
+      <div class="row">
+        <div class="col-3">
           <div class="card" style="width: 18rem;">
             <img
               src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_05.png"
@@ -218,7 +218,7 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col-3">
           <div class="card" style="width: 18rem;">
             <img
               src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_06.png"
@@ -233,7 +233,7 @@
                   <div class="col">
                     <p class="card-text">0 reviews</p>
                   </div>
-                  <div class="col">
+                  <div class="col-6">
                     <p class="card-text">$150/night</p>
                   </div>
                 </div>
