--- a/house-creat.html
+++ b/house-creat.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
 
-    <title>House Creat</title>
+    <title>House Create</title>
 
     <link rel="stylesheet" href="styles/bootstrap.css" />
   </head>
