Adding the icons

--- a/houses.html
+++ b/houses.html
@@ -7,6 +7,10 @@
 
     <link rel="stylesheet" href="styles/bootstrap.css" />
     <link rel="stylesheet" href="styles/style.css" />
+    <script
+      src="https://kit.fontawesome.com/588e13b6ac.js"
+      crossorigin="anonymous"
+    ></script>
   </head>
   <body>
     <!--Logo and Login navbar-->
@@ -38,7 +42,9 @@
             <ul class="navbar-nav">
               <li class="nav-item">
                 <div class="input-group ">
-                  <label class="input-group-text" for="location">L</label>
+                  <label class="input-group-text" for="location"
+                    ><i class="fas fa-map-marker-alt"></i
+                  ></label>
                   <select class="form-select" id="location">
                     <option selected>Any Location</option>
                     <option>Koh Phangam</option>
@@ -49,7 +55,9 @@
               </li>
               <li class="nav-item">
                 <div class="input-group ">
-                  <label class="input-group-text" for="rooms">R</label>
+                  <label class="input-group-text" for="rooms"
+                    ><i class="fas fa-home"></i
+                  ></label>
                   <select class="form-select" id="rooms">
                     <option selected>Any rooms</option>
                     <option>1 room</option>
@@ -63,7 +71,9 @@
               </li>
               <li class="nav-item">
                 <div class="input-group">
-                  <span class="input-group-text">$</span>
+                  <span class="input-group-text"
+                    ><i class="fas fa-dollar-sign"></i
+                  ></span>
                   <input
                     type="number"
                     class="form-control"
@@ -74,7 +84,9 @@
               </li>
               <li class="nav-item">
                 <div class="input-group">
-                  <label class="input-group-text" for="price">P</label>
+                  <label class="input-group-text" for="price"
+                    ><i class="fas fa-sort"></i
+                  ></label>
                   <select class="form-select" id="price">
                     <option selected>Price(low to high)</option>
                     <option>Price(high to low)</option>
@@ -102,11 +114,12 @@
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img
-              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_01.png"
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2002/house_02_01.png"
               class="card-img-top"
               alt="..."
             />
             <div class="card-body">
+              <i class="fas fa-map-marker-alt"></i>
               <p class="card-text"><small>Koh Samui . 4 rooms</small></p>
               <h5 class="card-title">Luxury Villa in Chaweng</h5>
               <div class="container">
@@ -125,7 +138,7 @@
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img
-              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295026/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_02.png"
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2003/house_03_01.png"
               class="card-img-top"
               alt="..."
             />
@@ -148,7 +161,7 @@
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img
-              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_03.png"
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2004/house_04_01.png"
               class="card-img-top"
               alt="..."
             />
@@ -171,7 +184,7 @@
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img
-              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_04.png"
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2005/house_05_01.png"
               class="card-img-top"
               alt="..."
             />
@@ -198,7 +211,7 @@
         <div class="col-3">
           <div class="card" style="width: 18rem;">
             <img
-              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_05.png"
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2006/house_06_01.png"
               class="card-img-top"
               alt="..."
             />
@@ -221,7 +234,7 @@
         <div class="col-3">
           <div class="card" style="width: 18rem;">
             <img
-              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_06.png"
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2007/house_07_01.png"
               class="card-img-top"
               alt="..."
             />
@@ -244,7 +257,7 @@
         <div class="col">
           <div class="card" style="width: 18rem;">
             <img
-              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295019/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2001/house_01_07.png"
+              src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1640295027/portal/web%20development%20beginners/05%20Project%20Airbnb/house%2008/house_08_01.png"
               class="card-img-top"
               alt="..."
             />
