Creating the sign up page

--- a/signup.html
+++ b/signup.html
@@ -3,6 +3,83 @@
   <head>
     <meta charset="utf-8" />
     <title>Signup</title>
+    <link rel="stylesheet" href="styles/bootstrap.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="card">
+      <div class="position-relative">
+        <!--background image-->
+        <img
+          src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1642399115/portal/web%20development%20beginners/05%20Project%20Airbnb/assets/thailand.jpg"
+          class="card-img"
+          alt="..."
+        />
+        <div class="card-img-overlay">
+          <div class="position-absolute top-50 start-50 translate-middle">
+            <div class="card" style="width: 35rem; height: 32rem">
+              <div class="card-body">
+                <!--logo-->
+                <img
+                  src="https://res.cloudinary.com/dsko6ntfj/image/upload/v1642399114/portal/web%20development%20beginners/05%20Project%20Airbnb/assets/logo-airbnb.png"
+                  class="position-relative position-relative top-0 start-50 translate-middle-x"
+                  height="35"
+                  alt="..."
+                />
+                <!--login and password-->
+                <form>
+                  <div class="mb-3 mt-3">
+                    <label for="exampleFormControlInput1" class="form-label"
+                      >Your Full Name</label
+                    >
+                    <input
+                      type="text"
+                      class="form-control"
+                      id="exampleFormControlInput1"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label"
+                      >Profile Picture</label
+                    >
+                    <input
+                      type="url"
+                      class="form-control"
+                      id="exampleFormControlInput1"
+                      placeholder="http://..."
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="exampleFormControlInput1" class="form-label"
+                      >Email address</label
+                    >
+                    <input
+                      type="email"
+                      class="form-control"
+                      id="exampleFormControlInput1"
+                    />
+                  </div>
+                  <div class="mb-3">
+                    <label for="inputPassword" class="form-label"
+                      >Password</label
+                    >
+                    <div>
+                      <input
+                        type="password"
+                        class="form-control"
+                        id="inputPassword"
+                      />
+                    </div>
+                  </div>
+                </form>
+                <button type="button" class="btn btn-secondary">Sign up</button>
+                <p class="mt-3 mb-3">
+                  <small> Alredy have an account? <a href="#">Login</a> </small>
+                </p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </body>
 </html>
